# todo-listux

./: CMakeLists.txt  README.md  dir.py  gitlog.txt  tl
include/: include.h  utils.h
include/database/: add_data.h  delete_data.h  filePath.h  get_file_Path.h  init.h  load_data.h  load_day_year_file.h  load_month_year_file.h  load_setting_file.h  load_week_year_file.h  load_year_file.h  modify_data.h  save_data.h  save_setting.h
include/database/load_date/: load_data.h  load_day_year_file.h  load_month_year_file.h  load_setting_file.h  load_week_year_file.h  load_year_file.h  load_year_year_file.h
include/database/save_date/: save_data.h  save_setting.h
include/db/: data.h  get_file_Path.h  load_setting.h  save_setting.h
include/display/: color.h  display.h  help.h  show_data.h  text_display_width.h  text_print_help.h
include/exec/: exec.h
include/execute/: add.h  all_execute.h  delete.h  done.h  execute.h  find.h  modify.h  set_setting.h  undo.h
include/lexer/: date.h  lexer_date.h
include/log/: log.h  log_all_files.h  log_for_node.h
include/parse/: parse_node.h
include/parser/: date_validate_format.h  parse_command.h  parse_date.h  parse_date_type.h
include/parser/args_num/: args_2.h  (+5 more)
include/setting/: setting.h
include/strcutures/: All_Files.h  Task.h  TaskDay.h  TaskMonth.h  TaskYear.h  TotalFileYearDate.h  Total_File_Year_Date.h  command.h  setting.h  数据结构说明.md
include/structure/: command.h  date.h  error.h  node.h  setting.h  task.h
include/tools/: MONTH.h  command_error.h  judue_command_nums.h  tools.h
py/: allfiles.py  allfiles.txt  alllines.py  gcc.py  include_auto.py  make.py  set_tl.bat  test_shell.py  txt.txt
src/: TL.md  main.c  run.sh  utils.c
src/database/: add_data.c  delete_data.c  filePath.c  get_file_Path.c  init.c  load_data.c  load_day_year_file.c  load_month_year_file.c  load_setting_file.c  load_week_year_file.c  load_year_file.c  modify_data.c  save_data.c  save_setting.c
src/db/: data.c  get_file_Path.c  load_setting.c  save_setting.c
src/display/: display.c  help.c  show_data.c  text_display_width.c  text_print_help.c
src/exec/: exec.c
src/execute/: add.c  all_execute.c  delete.c  done.c  modify.c  set_setting.c  undo.c
src/lexer/: date.c  lexer_date.c
src/log/: log.c  log_all_files.c  log_for_node.c
src/parse/: parse_node.c
src/parser/: date_validate_format.c  parse_command.c  parse_date.c  parse_date_type.c  parse_k_v.c
src/strcutures/: All_Files.c  TaskDay.c  TaskMonth.c  TaskYear.c  Total_File_Year_Date.c  command.c  setting.c
src/structure/: command.c  date.c  error.c  node.c  setting.c  task.c
src/tools/: MONTH.c  command_error.c  judue_command_nums.c  tools.c
test/: command_error.c  datacopy.c  dir.c  help.c  main.c  printStar.c  set_setting.c  test.c  testNode  testNode.c  test_file_path  test_file_path.c  test_setting.c  todo.c
test/db/: data  data.c  test_date_file  test_date_file.c
test/display/: help  help.c  print  print.c
test/structrue/: test_command.c  test_date.c  test_node.c
完整手册/tl/: set_tl_to_path.bat  一定先看这个文件.txt
需求/: 架构全图.md
需求文档/: 总进度.md  指令表.md  架构图.md
(+44 files in other folders)
